# cpp-event-driven-backtester

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  requirements-acquisition.txt  requirements.txt
.github/workflows/: ci.yml  release.yml  reproducibility.yml
apps/: quant_cli.cpp
audit/data_release/: blocker_closure.md  data_lineage_inventory.csv  git_history_data_report.md  history_occurrences.csv  public_data_boundary_report.md  release_gate_evidence.json
audit/final/: audit_claim_inventory.csv  audit_findings.csv  audit_manifest.json  cross_platform_comparison.csv  final_audit_report.md  release_acceptance_criteria.md  release_blockers.md  rng_migration_decision.md  rng_portability_evidence.csv  test_quality_review.csv  threshold_stability.csv  (+2 more)
configs/: ma_walk_forward.json  macd_walk_forward.json  portfolio_equal_weight.json  portfolio_inverse_volatility.json  portfolio_momentum_top_n.json  repro_single_aapl_ma.json  repro_single_syn_eq_a_ma.json  rsi_walk_forward.json  selection_risk_all.json  selection_risk_all_high_cost.json  selection_risk_all_zero_cost.json  selection_risk_ma.json  selection_risk_macd.json  selection_risk_rsi.json  selection_risk_volatility_breakout.json
data/: AAPL.csv  MSFT.csv  SPY.csv  TSLA.csv
docs/: ARCHITECTURE.md  ATTRIBUTION.md  CONFIGURATION.md  CORPORATE_ACTIONS.md  DATA_INPUT_GUIDE.md  DATA_MODEL.md  DATA_PROVENANCE.md  FINAL_AUDIT.md  LIMITATIONS.md  MARKET_CALENDAR.md  METHODOLOGY.md  PERFORMANCE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_POLICY.md  REPRODUCIBILITY.md  RESULT_SCHEMA.md  RNG_METHODOLOGY.md  STATISTICAL_METHODOLOGY.md  TESTING.md
include/: AllocationPolicy.h  Analysis.h  Backtester.h  Event.h  ExecutionHandler.h  MarketData.h  Metrics.h  Portfolio.h  PortfolioBacktester.h  ResearchMethodology.h  Strategy.h
manifests/: attribution_equal_weight.json  canonical_research_suite.json  complete_seven_package_selection_risk.json  portfolio_equal_weight.json  portfolio_inverse_volatility.json  portfolio_momentum_top_n.json  public_reproducibility_suite.json  public_synthetic_attribution_equal_weight.json  public_synthetic_portfolio_equal_weight.json  public_synthetic_portfolio_inverse_volatility.json  public_synthetic_portfolio_momentum_top_n.json  public_synthetic_selection_risk_combined.json  public_synthetic_selection_risk_combined_high_cost.json  public_synthetic_selection_risk_combined_zero_cost.json  public_synthetic_selection_risk_ma.json  public_synthetic_selection_risk_macd.json  public_synthetic_selection_risk_rsi.json  public_synthetic_selection_risk_suite.json  public_synthetic_selection_risk_volatility_breakout.json  public_synthetic_single_ma.json  public_synthetic_statistics_equal_weight.json  selection_risk_combined.json  selection_risk_combined_high_cost.json  selection_risk_combined_zero_cost.json  selection_risk_ma.json  selection_risk_macd.json  selection_risk_rsi.json  selection_risk_volatility_breakout.json  single_aapl_ma.json  statistics_equal_weight.json
results/: AAPL_MACD_Momentum_equity_curve.csv  AAPL_MACD_Momentum_performance_summary.csv  AAPL_MACD_Momentum_trades.csv  AAPL_MA_Cross_equity_curve.csv  AAPL_MA_Cross_performance_summary.csv  AAPL_MA_Cross_trades.csv  AAPL_RSI_Mean_Reversion_equity_curve.csv  AAPL_RSI_Mean_Reversion_performance_summary.csv  AAPL_RSI_Mean_Reversion_trades.csv  BTC_USD_MACD_Momentum_equity_curve.csv  BTC_USD_MACD_Momentum_performance_summary.csv  BTC_USD_MACD_Momentum_trades.csv  BTC_USD_MA_Cross_equity_curve.csv  BTC_USD_MA_Cross_performance_summary.csv  BTC_USD_MA_Cross_trades.csv  BTC_USD_RSI_Mean_Reversion_equity_curve.csv  BTC_USD_RSI_Mean_Reversion_performance_summary.csv  BTC_USD_RSI_Mean_Reversion_trades.csv  MSFT_MACD_Momentum_equity_curve.csv  MSFT_MACD_Momentum_performance_summary.csv  MSFT_MACD_Momentum_trades.csv  MSFT_MA_Cross_equity_curve.csv  MSFT_MA_Cross_performance_summary.csv  MSFT_MA_Cross_trades.csv  MSFT_RSI_Mean_Reversion_equity_curve.csv  MSFT_RSI_Mean_Reversion_performance_summary.csv  MSFT_RSI_Mean_Reversion_trades.csv  SPY_MACD_Momentum_equity_curve.csv  SPY_MACD_Momentum_performance_summary.csv  SPY_MACD_Momentum_trades.csv  SPY_MA_Cross_equity_curve.csv  SPY_MA_Cross_performance_summary.csv  SPY_MA_Cross_trades.csv  SPY_RSI_Mean_Reversion_equity_curve.csv  SPY_RSI_Mean_Reversion_performance_summary.csv  SPY_RSI_Mean_Reversion_trades.csv  TSLA_MACD_Momentum_equity_curve.csv  TSLA_MACD_Momentum_performance_summary.csv  TSLA_MACD_Momentum_trades.csv  TSLA_MA_Cross_equity_curve.csv  (+18 more)
scripts/: benchmark_performance.py  check_regression_snapshots.py  download_data.py  generate_attribution_report.py  generate_data_release_audit.py  generate_local_data_manifest.py  generate_reproducibility_manifests.py  generate_research_report.py  generate_selection_risk_report.py  generate_statistics_report.py  generate_synthetic_market_data.py  reconstruct_tagged_release.py  reference_stable_rng.py  release_artifacts.py  reproduce.py  reproducibility.py  run_final_audit.py  test_attribution_validator.py  test_download_data.py  test_parallel_equivalence.py  test_selection_risk_reference.py  test_selection_risk_validator.py  test_statistics_reference.py  test_statistics_validator.py  validate_final_audit.py  validate_market_data.py  validate_performance_results.py  validate_public_data_boundary.py  validate_release_provenance.py  validate_reproducibility.py  validate_results.py  validate_selection_risk.py  validate_synthetic_market_data.py  visualize_attribution.py  visualize_results.py  visualize_selection_risk.py  visualize_statistics.py
src/: AllocationPolicy.cpp  Analysis.cpp  Backtester.cpp  ExecutionHandler.cpp  MarketData.cpp  Metrics.cpp  Portfolio.cpp  PortfolioBacktester.cpp  ResearchMethodology.cpp  Strategy.cpp  main.cpp
tests/: test_engine.cpp  test_final_audit.py  test_public_data_boundary.py  test_release_artifacts.py  test_release_metadata.py  test_release_provenance.py  test_reproducibility.py  test_reproducibility_integration.py  test_synthetic_data.py  test_user_market_data.py
(+203 files in other folders)
